Archive2/5a/c7776b7001ddc1/output
main.cpp: In instantiation of 'void test() [with bool B = false]':							main.cpp: In instantiation of 'void test() [with bool B = false]':
main.cpp:37:17:	  required from here											main.cpp:37:17:	  required from here
main.cpp:18:75: error: no matching function for call to 'types_must_match::assertion_failed(int)'			main.cpp:22:34: error: static assertion failed: types_must_match
 #define STATIC_ASSERT(expr, msg) (void)sizeof( msg::assertion_failed<expr>(0) )					 #define STATIC_ASSERT(expr, msg) static_assert(expr, #msg)
									   ^										  ^
main.cpp:30:5: note: in expansion of macro 'STATIC_ASSERT'								main.cpp:30:5: note: in expansion of macro 'STATIC_ASSERT'
     STATIC_ASSERT(B, types_must_match);										     STATIC_ASSERT(B, types_must_match);
     ^															     ^
main.cpp:9:16: note: candidate: template<bool C> static int types_must_match::assertion_failed(typename assert<C>::type 
     static int assertion_failed(typename assert<C>::type);								
		^													
main.cpp:9:16: note:   template argument deduction/substitution failed:							
main.cpp:18:75: note:	cannot convert '0' (type 'int') to type 'assert<false>::type {aka assert<false>}'		
 #define STATIC_ASSERT(expr, msg) (void)sizeof( msg::assertion_failed<expr>(0) )					
									   ^						
main.cpp:30:5: note: in expansion of macro 'STATIC_ASSERT'								
     STATIC_ASSERT(B, types_must_match);										
     ^															
